misha-06-26-login-signup поменял бэкграунд на заставке

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Game name</title>
+  <link rel="stylesheet" href="css/menu-style.css">
 </head>
 <body>
-<h1>Game name</h1>
-<p>Legend</p>
-<form action="/game">
+  <h1>Game name</h1>
+  <p>Legend</p>
+  <form action="/game">
     <button type="submit">Play</button>
-</form>
-<form action="/user/signout">
+  </form>
+  <form action="/user/signout">
     <button type="submit">Sign Out</button>
-</form>
+  </form>
 </body>
 </html>
