--- a/templates/screensaver.html.twig
+++ b/templates/screensaver.html.twig
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="stylesheet" href="css/screensaver-style.css">
 </head>
 <body>
-<h1>Game name</h1>
-<p>Description</p>
-<form action="/user/signup">
-  <button type="submit">Sign Up</button>
-</form>
-<form action="/user/signin">
-  <button type="submit">Sign In</button>
-</form>
+  <div class="title">
+    <h1 class="title-text">Game name</h1>
+  </div>
+  <form action="/user/signup">
+    <button type="submit">Sign Up</button>
+  </form>
+  <form action="/user/signin">
+    <button type="submit">Sign In</button>
+  </form>
 </body>
 </html>
