--- a/templates/signin-user-form.html.twig
+++ b/templates/signin-user-form.html.twig
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <title>Sign In User</title>
     <link rel="stylesheet" href="css/signin-style.css">
+    <link href="https://cdn.jsdelivr.net/npm/beercss@3.5.8/dist/cdn/beer.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="form">
-    <h1 class="form__title">Sign In</h1>
     <form action="/signin" method="post">
         <div class="form__username">
-            <label for="username">Name:</label><br>
-            <input name="username" id="username" type="text">
+            <input name="username" id="username" type="text" placeholder="имя">
         </div>
         <div class="form__password">
-            <label for="password">Password:</label><br>
-            <input name="password" id="password" type="text">
+            <input name="password" id="password" type="password" placeholder="пароль">
         </div>
-        <button class="form__button-signin" type="submit">Sign In</button>
+        <button class="button-large" type="submit">войти</button>
+    </form>
+    <p>Ещё не зарегистрированы?</p>
+    <form action="/user/signup">
+        <button class="secondary-button" type="submit">регистрация</button>
     </form>
 </div>
 </body>
+</html>
