--- a/templates/signup-user-form.html.twig
+++ b/templates/signup-user-form.html.twig
@@ -15,14 +15,15 @@
     {% endfor %}
     <form action="/signup" method="post">
         <div class="form__username">
-            <label for="username">Name:</label><br>
-            <input name="username" id="username" type="text">
+            <input name="username" id="username" type="text" placeholder="имя">
         </div>
         <div class="form__password">
-            <label for="password">Password:</label><br>
-            <input name="password" id="password" type="text">
+            <input name="password" id="password" type="text" placeholder="пароль">
         </div>
-        <button class="form__button-signup" type="submit">Sign Up</button>
+        <button class="form__button-signup" type="submit">войти</button>
+    </form>
+    <form action="/user/signin">
+        <button type="submit">Sign In</button>
     </form>
 </div>
 </body>
