--- a/templates/signin-user-form.html.twig
+++ b/templates/signin-user-form.html.twig
@@ -17,7 +17,7 @@
         </div>
         <button class="small-round responsive button-signin" type="submit">войти</button>
     </form>
-    <p class="form__text">Ещё не зарегистрированы?</p>
+    <p class="center-align form__text">Ещё не зарегистрированы?</p>
     <form action="/user/signup">
         <button class="small-round responsive button-signup" type="submit">регистрация</button>
     </form>
