--- a/templates/signup-user-form.html.twig
+++ b/templates/signup-user-form.html.twig
@@ -17,7 +17,7 @@
         </div>
         <button class="small-round responsive button-signin" type="submit">зарегистрироваться</button>
     </form>
-    <p class="form__text">Уже зарегистрированы?</p>
+    <p class="center-align form__text">Уже зарегистрированы?</p>
     <form action="/user/signin">
         <button class="small-round responsive button-signup" type="submit">войти</button>
     </form>
