misha-06-26-map сделал установку заднего фона для карты

--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- <link rel="stylesheet" href="style.css"/> -->
-  <title>Game</title>
+  <title>Level 1</title>
   <script src="script/pixi.js"></script>
   <script src="script/Bullet.js"></script>
   <script src="script/Hero.js"></script>
   <script src="script/Ground.js"></script>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="css/level1-style.css"/>
 </head>
 <body>
 <script src="script/index.js"></script>
