misha-06-28-legend-screen добавил страницу с легендой

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Menu</title>
-  <link rel="stylesheet" href="css/menu-style.css">
   <link href="https://fonts.googleapis.com/css2?family=Miltonian+Tattoo&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/beercss@3.5.8/dist/cdn/beer.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/menu-style.css">
 </head>
 <body>
   <h1 class="center-align title">Menu</h1>
-  <form class="form-play" action="/game">
+  <form class="form-play" action="/legend">
     <button class="button-custom" type="submit">
-      <img class="button-custom__play" src="images/play-button.png" alt="play">
+      <img class="button-custom__play" src="images/play-button.svg" alt="play">
     </button>
   </form>
   <form action="/user/signout">
