--- a/templates/game-lose.html.twig
+++ b/templates/game-lose.html.twig
@@ -5,11 +5,11 @@
     <title>Legend</title>
     <link href="https://fonts.googleapis.com/css2?family=Miltonian+Tattoo&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/beercss@3.5.8/dist/cdn/beer.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/win-style.css">
+    <link rel="stylesheet" href="css/lose-style.css">
 </head>
 <body>
 <div class="main">
-    <h1 class="center-align">You Win</h1>
+    <h1 class="center-align">You Lose</h1>
     <a class="continue" href="/game">Продолжить -></a>
 </div>
 </body>
