--- a/public/css/legend-style.css
+++ b/public/css/legend-style.css
@@ -17,7 +17,7 @@ body {
 .main {
     background-color: rgba(61, 61, 61, 0.6);
     width: 700px;
-    height: 90%;
+    height: 700px;
     margin: 5% auto 0 auto;
     padding: 30px;
 }
