andrei-07-02-logical-enemy Добавил логику врага, ходьбу и атаку взаимодействие с персонажем, фаербол, логику его полёта

--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -5,7 +5,9 @@
   <title>Game</title>
   <script src="script/pixi.js"></script>
   <script src="script/Bullet.js"></script>
+  <script src="script/Fireball.js"></script>
   <script src="script/Hero.js"></script>
+  <script src="script/Enemy.js"></script>
   <script src="script/Ground.js"></script>
   <style>
     * {
