--- a/public/css/joystick-style.css
+++ b/public/css/joystick-style.css
@@ -33,3 +33,12 @@ html, body {
     transform: translate(-50%, -50%);
     touch-action: none;
 }
+
+.buttons {
+
+}
+
+.up {
+    width: 300px;
+    height: 300px;
+}
