--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -9,6 +9,7 @@
   <script src="script/Hero.js"></script>
   <script src="script/Enemy.js"></script>
   <script src="script/Ground.js"></script>
+  <script src="script/WoodenPlank.js"></script>
   <link rel="stylesheet" href="css/level1-style.css"/>
 </head>
 <body>
