--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -8,10 +8,10 @@
   <script src="script/Fireball.js"></script>
   <script src="script/Hero.js"></script>
   <script src="script/Enemy.js"></script>
+  <script src="script/Devil.js"></script>
 
   <script src="script/Bat.js"></script>
   <script src="script/Poison.js"></script>
-
 
   <script src="script/Ground.js"></script>
   <link rel="stylesheet" href="css/level1-style.css"/>
