--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -4,18 +4,17 @@
   <meta charset="UTF-8">
   <title>Menu</title>
   <link href="https://fonts.googleapis.com/css2?family=Miltonian+Tattoo&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/beercss@3.5.8/dist/cdn/beer.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/menu-style.css">
 </head>
 <body>
   <h1 class="center-align title">Menu</h1>
-  <form class="form-play" action="/legend">
-    <button class="button-custom" type="submit">
-      <img class="button-custom__play" src="images/play-button.svg" alt="play">
-    </button>
-  </form>
-  <form action="/user/signout">
-    <button type="submit">Sign Out</button>
-  </form>
+  <div>
+    <a href="/first-level">1 уровень</a>
+    <a href="/second-level">2 уровень</a>
+    <a href="/third-level">3 уровень</a>
+  </div>
+  <a type="submit" href="/user/signout">Sign Out</a>
 </body>
 </html>
