--- a/public/css/screensaver-style.css
+++ b/public/css/screensaver-style.css
@@ -24,7 +24,11 @@ body {
 }
 
 .button-custom {
-    width: 200px;
+    width: 300px;
+    height: 100px;
     margin-top: 30px;
-    font: 400 24px/28px "Miltonian Tattoo", sans-serif;
+    font: 400 24px/28px "Lora", sans-serif;
+    border-radius: 50px;
+    color: rgba(255, 255, 255, 1);
+    background-color: rgba(103, 80, 164, 1);
 }
