--- a/templates/legend.html.twig
+++ b/templates/legend.html.twig
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Legend</title>
     <link href="https://fonts.googleapis.com/css2?family=Miltonian+Tattoo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/beercss@3.5.8/dist/cdn/beer.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/legend-style.css">
 </head>
@@ -21,7 +22,7 @@
             <br>
             Будьте готовы к жестокой битве и помните: судьба человечества в ваших руках.<br>
         </p>
-        <a class="continue" href="/game">Продолжить -></a>
+        <a class="continue" href="/menu">Продолжить -></a>
     </div>
 </body>
 </html>
