--- a/templates/screensaver.html.twig
+++ b/templates/screensaver.html.twig
@@ -4,13 +4,12 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <link href="https://fonts.googleapis.com/css2?family=Miltonian+Tattoo&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/screensaver-style.css">
   <link href="https://cdn.jsdelivr.net/npm/beercss@3.5.8/dist/cdn/beer.min.css" rel="stylesheet">
 </head>
 <body>
   <h1 class="center-align title">Demon Deliverance</h1>
-  <form action="/user/signin">
-    <button class="medium padding center button-custom" type="submit">Continue</button>
-  </form>
+  <a class="medium padding center button-custom" type="submit" href="/legend">Продолжить</a>
 </body>
 </html>
