--- a/templates/signin_user_form.html.twig
+++ b/templates/signin_user_form.html.twig
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sign Up User</title>
-    <link rel="stylesheet" href="/css/signup-style.css">
+    <title>Sign In User</title>
+    <link rel="stylesheet" href="/css/signin-style.css">
     <link href="https://cdn.jsdelivr.net/npm/beercss@3.5.8/dist/cdn/beer.min.css" rel="stylesheet">
-    <script src="/script/validation.js" type="application/javascript"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 </head>
 <body>
-<div id="form" class=" form">
-    <form action="/signup" method="post">
+<div class=" form">
+    <form action="/signin" method="post">
         <span class="error-text">{{ errors.username ?? '' }}</span>
         <div class="field border fill responsive input">
             <input name="username" id="username" type="text" placeholder="имя">
@@ -18,11 +18,11 @@
         <div class="field border fill input">
             <input name="password" id="password" type="password" placeholder="пароль">
         </div>
-        <button class="small-round responsive button-signin" type="submit">зарегистрироваться</button>
+        <button class="small-round responsive button-signin" type="submit">войти</button>
     </form>
-    <p class="center-align form__text">Уже зарегистрированы?</p>
-    <form action="/user/signin">
-        <button class="small-round responsive button-signup" type="submit">войти</button>
+    <p class="center-align form__text">Ещё не зарегистрированы?</p>
+    <form action="/user/signup">
+        <button class="small-round responsive button-signup" type="submit">регистрация</button>
     </form>
 </div>
 </body>
