--- a/templates/third_level.html.twig
+++ b/templates/third_level.html.twig
@@ -9,15 +9,13 @@
   <script src="script/Hero.js"></script>
   <script src="script/Enemy.js"></script>
   <script src="script/Devil.js"></script>
-
   <script src="script/Bat.js"></script>
   <script src="script/Poison.js"></script>
-
   <script src="script/Ground.js"></script>
   <script src="script/WoodenPlank.js"></script>
   <link rel="stylesheet" href="css/level1-style.css"/>
 </head>
 <body>
-<script src="script/index.js"></script>
+Здесь будет третий уровень
 </body>
 </html>
