--- a/public/css/menu-style.css
+++ b/public/css/menu-style.css
@@ -18,27 +18,29 @@ body {
     width: 100%;
     height: 261px;
     background-color: rgba(61, 61, 61, 0.6);
-    font: 400 100px/155px "Miltonian Tattoo", sans-serif;
+    font: 400 100px/155px "Lora", sans-serif;
     color: rgba(255, 255, 255, 1);
     margin: 5% 0 0 0;
 }
 
-.form-play {
+.levels-list {
     display: flex;
-    justify-content: center;
-    margin-top: 50px;
-    padding: 0;
+    justify-content: space-around;
+    margin: 30px 0 0 0;
 }
-.button-custom {
-    width: 330px;
-    height: 330px;
-    border-radius: 50%;
-    background-color: rgba(61, 61, 61, 0.6);
-    padding: 0;
-}
-.button-custom__play {
-    min-block-size: 300px !important;
-    height: 300px;
+
+.level-list__first,
+.level-list__second,
+.level-list__third {
+    display: block;
     width: 300px;
-    padding: 0;
+    height: 200px;
+    background-color: rgba(61, 61, 61, 0.6);
+    border-radius: 30px;
+    padding: 20px;
+    color: rgba(255, 255, 255, 1);
+}
+
+.level-list__first {
+    padding: 20px;
 }
