--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -9,12 +9,24 @@
   <link rel="stylesheet" href="css/menu-style.css">
 </head>
 <body>
-  <h1 class="center-align title">Menu</h1>
-  <div>
-    <a href="/first-level">1 уровень</a>
-    <a href="/second-level">2 уровень</a>
-    <a href="/third-level">3 уровень</a>
+  <h1 class="center-align title">Меню</h1>
+  <div class="levels-list">
+    <a class="level-list__first" href="/first-level">
+      <p>1 уровень</p>
+    </a>
+    <a class="level-list__second" href="/second-level">
+      <p>2 уровень</p>
+      {% if level < 2 %}
+        <p>LOCKED</p>
+      {% endif %}
+    </a>
+    <a class="level-list__third" href="/third-level">
+      <p>3 уровень</p>
+      {% if level < 3 %}
+        <p>LOCKED</p>
+      {% endif %}
+    </a>
   </div>
-  <a type="submit" href="/user/signout">Sign Out</a>
+  <a type="submit" href="/user/signout">Выйти</a>
 </body>
 </html>
