--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -14,19 +14,27 @@
     <a class="level-list__first" href="/first-level">
       <p>1 уровень</p>
     </a>
+    {% if level == 2 %}
     <a class="level-list__second" href="/second-level">
       <p>2 уровень</p>
-      {% if level < 2 %}
-        <p>LOCKED</p>
-      {% endif %}
     </a>
-    <a class="level-list__third" href="/third-level">
-      <p>3 уровень</p>
-      {% if level < 3 %}
-        <p>LOCKED</p>
-      {% endif %}
-    </a>
+    {% else %}
+    <div class="level-list__second">
+      <p>2 уровень</p>
+      <p>НЕДОСТУПНО</p>
+    </div>
+    {% endif %}
+    {% if level == 3 %}
+      <a class="level-list__third" href="/second-level">
+        <p>3 уровень</p>
+      </a>
+    {% else %}
+      <div class="level-list__third">
+        <p>3 уровень</p>
+        <p>НЕДОСТУПНО</p>
+      </div>
+    {% endif %}
   </div>
-  <a type="submit" href="/user/signout">Выйти</a>
+  <a class="signout" type="submit" href="/user/signout">Выйти</a>
 </body>
 </html>
