--- a/templates/game_lose.html.twig
+++ b/templates/game_lose.html.twig
@@ -10,8 +10,8 @@
 </head>
 <body>
 <div class="main">
-    <h1 class="center-align">You Lose</h1>
-    <a class="continue" href="/game">Продолжить -></a>
+    <h1 class="center-align">Вы мертвы</h1>
+    <a class="continue" href="/menu">Продолжить -></a>
 </div>
 </body>
 </html>
