--- a/templates/game_win.html.twig
+++ b/templates/game_win.html.twig
@@ -10,8 +10,8 @@
 </head>
 <body>
 <div class="main">
-    <h1 class="center-align">You Win</h1>
-    <a class="continue" href="/game">Продолжить -></a>
+    <h1 class="center-align">Вы победили</h1>
+    <a class="continue" href="/menu">Продолжить -></a>
 </div>
 </body>
 </html>
