--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -11,6 +11,7 @@
   <script src="script/Ground.js"></script>
   <script src="script/WoodenPlank.js"></script>
   <script src="script/Shield.js"></script>
+  <script src="script/Health.js"></script>
   <link rel="stylesheet" href="css/level1-style.css"/>
 </head>
 <body>
