--- a/public/css/choose_level_style.css
+++ b/public/css/choose_level_style.css
@@ -24,15 +24,15 @@ body {
     margin: 5% 0 0 0;
 }
 
-.options-list {
+.levels-list {
     display: flex;
     justify-content: space-around;
     margin: 50px 0 0 0;
 }
 
-.rating,
-.single,
-.multi {
+.level-list__first,
+.level-list__second,
+.level-list__third {
     display: block;
     width: 300px;
     height: 200px;
@@ -46,9 +46,9 @@ body {
     padding: 20px;
 }
 
-.signout {
+.previous-page {
     position: absolute;
-    width: 100px;
+    width: 125px;
     height: 50px;
     color: rgba(255, 255, 255, 1);
     font: 400 16px/20px "Lora", sans-serif;
