--- a/public/css/rating-style.css
+++ b/public/css/rating-style.css
@@ -15,40 +15,54 @@ body {
     background-size: cover;
 }
 
-.title {
-    width: 100%;
-    height: 261px;
-    background-color: rgba(61, 61, 61, 0.6);
-    font: 400 100px/155px "Lora", sans-serif;
-    color: rgba(255, 255, 255, 1);
-    margin: 5% 0 0 0;
-}
-
-.options-list {
+.table {
     display: flex;
     justify-content: space-around;
-    margin: 50px 0 0 0;
+    margin: 30px;
 }
 
-.rating,
-.single,
-.multi {
-    display: block;
-    width: 300px;
-    height: 200px;
+.table__multi {
+    width: 45vw;
+    height: 85vh;
     background-color: rgba(61, 61, 61, 0.6);
-    border-radius: 30px;
     padding: 20px;
+}
+
+.table__single {
+    width: 45vw;
+    height: 85vh;
+    background-color: rgba(61, 61, 61, 0.6);
+    padding: 20px;
+}
+
+.table__levels {
+    display: flex;
+    justify-content: space-around;
+    height: 90%;
+}
+
+.table__first-level,
+.table__second-level,
+.table__third-level {
+    width: 30%;
+    background-color: rgba(61, 61, 61, 0.8);
+    padding: 10px;
+}
+
+h2 {
+    font: 400 30px/34px "Lora", sans-serif;
     color: rgba(255, 255, 255, 1);
+    margin: 0 0 20px 0;
 }
 
-.level-list__first {
-    padding: 20px;
+h3 {
+    color: rgba(255, 255, 255, 1);
+    font: 400 16px/20px "Lora", sans-serif;
 }
 
-.signout {
+.previous-page {
     position: absolute;
-    width: 100px;
+    width: 125px;
     height: 50px;
     color: rgba(255, 255, 255, 1);
     font: 400 16px/20px "Lora", sans-serif;
