--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -12,6 +12,7 @@
   <script src="script/WoodenPlank.js"></script>
   <script src="script/Shield.js"></script>
   <script src="script/Health.js"></script>
+  <script src="script/Portal.js"></script>
   <link rel="stylesheet" href="css/level1-style.css"/>
 </head>
 <body>
