2024-07-08-menu-improvements добавил иконки в меню

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -13,12 +13,15 @@
   <div class="options-list">
     <a class="rating" href="/rating">
       <p>Рейтинг</p>
+      <img src="images/rating_icon.svg">
     </a>
     <a class="single" href="/choose-level">
       <p>Одиночная кампания</p>
+      <img src="images/singleplayer_icon.svg">
     </a>
     <a class="multi" href="/lobby">
       <p>Многопользовательский режим</p>
+      <img src="images/multiplayer_icon.svg">
     </a>
   </div>
   <a class="signout" type="submit" href="/user/signout">Выйти</a>
