2024-07-08-menu-improvements исправил перенаправление после смерти и победы

--- a/templates/game_lose.html.twig
+++ b/templates/game_lose.html.twig
@@ -11,7 +11,7 @@
 <body>
 <div class="main">
     <h1 class="center-align">Вы мертвы</h1>
-    <a class="continue" href="/menu">Продолжить -></a>
+    <a class="continue" href="/choose-level">Продолжить -></a>
 </div>
 </body>
 </html>
