--- a/public/css/screensaver-style.css
+++ b/public/css/screensaver-style.css
@@ -9,6 +9,7 @@ html {
     overflow: hidden;
 }
 body {
+    position: relative;
     height: 100%;
     background: url('../images/screensaver-background.jpeg') no-repeat;
     background-size: cover;
@@ -23,12 +24,15 @@ body {
     margin: 10% 0 0 0;
 }
 
-.button-custom {
-    width: 300px;
-    height: 100px;
-    margin-top: 30px;
-    font: 400 24px/28px "Lora", sans-serif;
-    border-radius: 50px;
+.continue {
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    font: 400 20px/24px "Russo One", sans-serif;
     color: rgba(255, 255, 255, 1);
-    background-color: rgba(103, 80, 164, 1);
+    background-color: rgba(61, 61, 61, 0.6);
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 0;
 }
