--- a/templates/screensaver.html.twig
+++ b/templates/screensaver.html.twig
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1 class="center-align title">Demon Deliverance</h1>
-  <p class="center-align middle-align continue">Нажмите любую клавишу для продолжения...</p>
+  <p class="center-align middle-align continue">Нажмите любую клавишу, чтобы продолжить</p>
   <script>
       document.addEventListener('keydown', function()
       {
