--- a/public/css/choose_level_style.css
+++ b/public/css/choose_level_style.css
@@ -19,7 +19,7 @@ body {
     width: 100%;
     height: 261px;
     background-color: rgba(61, 61, 61, 0.6);
-    font: 400 100px/155px "Lora", sans-serif;
+    font: 400 100px/155px "Russo One", sans-serif;
     color: rgba(255, 255, 255, 1);
     margin: 5% 0 0 0;
 }
@@ -51,7 +51,7 @@ body {
     width: 125px;
     height: 50px;
     color: rgba(255, 255, 255, 1);
-    font: 400 16px/20px "Lora", sans-serif;
+    font: 400 16px/20px "Russo One", sans-serif;
     background-color: rgba(103, 80, 164, 1);
     border-radius: 25px;
     left: 20px;
