--- a/public/css/screensaver-style.css
+++ b/public/css/screensaver-style.css
@@ -26,11 +26,14 @@ body {
 
 .continue {
     position: absolute;
-    width: 100%;
-    height: 50px;
+    display: block;
+    width: 600px;
+    height: 40px;
     font: 400 20px/24px "Russo One", sans-serif;
     color: rgba(255, 255, 255, 1);
     background-color: rgba(61, 61, 61, 0.6);
+    border-top-right-radius: 30px;
+    border-top-left-radius: 30px;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
