--- a/public/css/win-style.css
+++ b/public/css/win-style.css
@@ -23,7 +23,7 @@ body {
 }
 
 h1 {
-    font: 400 50px/100px "Lora", sans-serif;
+    font: 400 50px/100px "Russo One", sans-serif;
     color: rgba(255, 255, 255, 1);
 }
 
