--- a/templates/choose_level.html.twig
+++ b/templates/choose_level.html.twig
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Menu</title>
   <link href="https://fonts.googleapis.com/css2?family=Miltonian+Tattoo&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/beercss@3.5.8/dist/cdn/beer.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/choose_level_style.css">
 </head>
