--- a/templates/signup_user_form.html.twig
+++ b/templates/signup_user_form.html.twig
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Sign Up User</title>
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/signup-style.css">
     <link href="https://cdn.jsdelivr.net/npm/beercss@3.5.8/dist/cdn/beer.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <script src="/script/validation.js" type="application/javascript"></script>
 </head>
 <body>
