--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -12,15 +12,15 @@
   <h1 class="center-align title">Меню</h1>
   <div class="options-list">
     <a class="rating" href="/rating">
-      <p>Рейтинг</p>
+      <p class="rating__title">Рейтинг</p>
       <img src="images/rating_icon.svg">
     </a>
     <a class="single" href="/choose-level">
-      <p>Одиночная кампания</p>
+      <p class="single__title">Одиночная кампания</p>
       <img src="images/singleplayer_icon.svg">
     </a>
     <a class="multi" href="/lobby">
-      <p>Многопользовательский режим</p>
+      <p class="multi__title">Вдвоём</p>
       <img src="images/multiplayer_icon.svg">
     </a>
   </div>
