--- a/templates/choose_level.html.twig
+++ b/templates/choose_level.html.twig
@@ -12,26 +12,26 @@
 <h1 class="center-align title">Выбор уровня</h1>
 <div class="levels-list">
   <a class="level-list__first" href="/first-level">
-    <p>1 уровень</p>
+    <p class="level-list__first-level-title">1 уровень</p>
   </a>
   {% if level == 2 %}
     <a class="level-list__second" href="/second-level">
-      <p>2 уровень</p>
+      <p class="level-list__second-level-title">2 уровень</p>
     </a>
   {% else %}
     <div class="level-list__second">
-      <p>2 уровень</p>
-      <p>НЕДОСТУПНО</p>
+      <p class="level-list__second-level-title">2 уровень</p>
+      <p class="unavailable">НЕДОСТУПНО</p>
     </div>
   {% endif %}
   {% if level == 3 %}
     <a class="level-list__third" href="/second-level">
-      <p>3 уровень</p>
+      <p class="level-list__third-level-title">3 уровень</p>
     </a>
   {% else %}
     <div class="level-list__third">
-      <p>3 уровень</p>
-      <p>НЕДОСТУПНО</p>
+      <p class="level-list__third-level-title">3 уровень</p>
+      <p class="unavailable">НЕДОСТУПНО</p>
     </div>
   {% endif %}
 </div>
