--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -19,7 +19,7 @@
       <p class="single__title">Одиночная кампания</p>
       <img src="images/singleplayer_icon.svg">
     </a>
-    <a class="multi" href="/lobby">
+    <a class="multi" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
       <p class="multi__title">Вдвоём</p>
       <img src="images/multiplayer_icon.svg">
     </a>
