--- a/templates/level2.html.twig
+++ b/templates/level2.html.twig
@@ -14,6 +14,7 @@
   <script src="script/Entity/Poison.js"></script>
 
   <script src="script/Entity/Ground.js"></script>
+  <script src="script/Entity/Wall.js"></script>
   <script src="script/Entity/WoodenPlank.js"></script>
   <link rel="stylesheet" href="css/level1-style.css"/>
 </head>
