--- a/public/css/rating-style.css
+++ b/public/css/rating-style.css
@@ -4,6 +4,13 @@
     text-decoration: none;
     box-sizing: border-box;
 }
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
 html {
     height: 100%;
     overflow: hidden;
@@ -22,14 +29,14 @@ body {
 }
 
 .table__multi {
-    width: 45vw;
+    width: 30vw;
     height: 85vh;
     background-color: rgba(61, 61, 61, 0.6);
     padding: 20px;
 }
 
 .table__single {
-    width: 45vw;
+    width: 60vw;
     height: 85vh;
     background-color: rgba(61, 61, 61, 0.6);
     padding: 20px;
@@ -50,14 +57,20 @@ body {
 }
 
 h2 {
-    font: 400 30px/34px "Lora", sans-serif;
+    font: 800 30px/34px "Lora", sans-serif;
     color: rgba(255, 255, 255, 1);
     margin: 0 0 20px 0;
 }
 
 h3 {
     color: rgba(255, 255, 255, 1);
-    font: 400 16px/20px "Lora", sans-serif;
+    font: 800 16px/20px "Lora", sans-serif;
+    margin: 0 0 10px 0;
+}
+
+.table__list {
+    color: rgba(255, 255, 255, 1);
+    margin: 0 0 0 17px;
 }
 
 .previous-page {
