misha-07-08-menu-improvements дописал легенду

--- a/templates/legend.html.twig
+++ b/templates/legend.html.twig
@@ -18,7 +18,7 @@
             <br>
             Доступ к лаборатории закрыт демонами, поэтому вам предстоит десантироваться на крышу и спускаться по этажам до подвала, где открыт разлом. Лаборатория уже частично разрушена и напоминает сам ад: повсюду препятствия, обвалы и разрушения.<br>
             <br>
-            В лаборатории можно найти оружие в специальных контейнерах. Уничтожая демонов, вы будете получать фрагменты, которые могут лечить вас.<br>
+            Уничтожая демонов, вы будете получать очки, которые позволят вам перейти на следующий этаж лаборатории. На этажах разбросаны щиты и жизни, которые помогут вам справиться с натиском демонов.<br>
             <br>
             Будьте готовы к жестокой битве и помните: судьба человечества в ваших руках.<br>
         </p>
