2024-07-13-dev вернул папки в обратное состояние

--- a/templates/level1.html.twig
+++ b/templates/level1.html.twig
@@ -3,24 +3,24 @@
 <head>
   <title>Game</title>
   <script src="script/pixi.js"></script>
-  <script src="script/Entity/Bullet.js"></script>
-  <script src="script/Entity/Experience.js"></script>
-  <script src="script/Entity/Fireball.js"></script>
-  <script src="script/Entity/Hero.js"></script>
-  <script src="script/Entity/Enemy.js"></script>
-  <script src="script/Entity/Devil.js"></script>
+  <script src="script/Bullet.js"></script>
+  <script src="script/Experience.js"></script>
+  <script src="script/Fireball.js"></script>
+  <script src="script/Hero.js"></script>
+  <script src="script/Enemy.js"></script>
+  <script src="script/Devil.js"></script>
 
-  <script src="script/Entity/Bat.js"></script>
-  <script src="script/Entity/Poison.js"></script>
+  <script src="script/Bat.js"></script>
+  <script src="script/Poison.js"></script>
 
-  <script src="script/Entity/Ground.js"></script>
-  <script src="script/Entity/WoodenPlank.js"></script>
-  <script src="script/Entity/Shield.js"></script>
-  <script src="script/Entity/Health.js"></script>
-  <script src="script/Entity/Portal.js"></script>
+  <script src="script/Ground.js"></script>
+  <script src="script/WoodenPlank.js"></script>
+  <script src="script/Shield.js"></script>
+  <script src="script/Health.js"></script>
+  <script src="script/Portal.js"></script>
   <link rel="stylesheet" href="css/level1-style.css"/>
 </head>
 <body>
-<script src="script/Levels/level1.js"></script>
+<script src="script/level1.js"></script>
 </body>
 </html>
