--- a/templates/level1.html.twig
+++ b/templates/level1.html.twig
@@ -16,6 +16,6 @@
   <link rel="stylesheet" href="css/level1-style.css"/>
 </head>
 <body>
-<script src="script/index.js"></script>
+<script src="script/level1.js"></script>
 </body>
 </html>
