misha-07-10-service доделал сервисы

--- a/templates/signin-user-form.html.twig
+++ b/templates/signin-user-form.html.twig
@@ -9,11 +9,11 @@
 <body>
 <div class=" form">
     <form action="/signin" method="post">
-        <span class="error-text">{{ errors.username ?? '' }}</span>
+        <span class="error-text">{{ error.username ?? '' }}</span>
         <div class="field border fill responsive input">
             <input name="username" id="username" type="text" placeholder="имя">
         </div>
-        <span class="error-text">{{ errors.password ?? '' }}</span>
+        <span class="error-text">{{ error.password ?? '' }}</span>
         <div class="field border fill input">
             <input name="password" id="password" type="password" placeholder="пароль">
         </div>
