--- a/templates/signup-user-form.html.twig
+++ b/templates/signup-user-form.html.twig
@@ -5,16 +5,15 @@
     <title>Sign Up User</title>
     <link rel="stylesheet" href="/css/signup-style.css">
     <link href="https://cdn.jsdelivr.net/npm/beercss@3.5.8/dist/cdn/beer.min.css" rel="stylesheet">
-    <script src="/script/validation.js" type="application/javascript"></script>
 </head>
 <body>
 <div id="form" class=" form">
     <form action="/signup" method="post">
-        <span class="error-text">{{ errors.username ?? '' }}</span>
+        <span class="error-text">{{ error.username ?? '' }}</span>
         <div class="field border fill responsive input">
             <input name="username" id="username" type="text" placeholder="имя">
         </div>
-        <span class="error-text">{{ errors.password ?? '' }}</span>
+        <span class="error-text">{{ error.password ?? '' }}</span>
         <div class="field border fill input">
             <input name="password" id="password" type="password" placeholder="пароль">
         </div>
