2024-07-13-dev Изменил переадресацию в /game-lose /game-win

--- a/templates/game-lose.html.twig
+++ b/templates/game-lose.html.twig
@@ -10,7 +10,7 @@
 <body>
 <div class="main">
     <h1 class="center-align">You Lose</h1>
-    <a class="continue" href="/game">Продолжить -></a>
+    <a class="continue" href="/level1">Продолжить -></a>
 </div>
 </body>
 </html>
