misha-07-08-menu-improvements переверстал страницы побды и проигрыша

--- a/templates/game_lose.html.twig
+++ b/templates/game_lose.html.twig
@@ -11,7 +11,16 @@
 <body>
 <div class="main">
     <h1 class="center-align">Вы мертвы</h1>
-    <a class="continue" href="/choose-level">Продолжить -></a>
+    <div class="options-list">
+        <a class="options-list__restart" href="/first-level">
+            <img src="images/restart_icon.svg" alt="restart">
+            <p class="restart">Повторить</p>
+        </a>
+        <a class="options-list__continue" href="/choose-level">
+            <img src="images/continue_icon.svg" alt="continue">
+            <p class="continue">Продолжить</p>
+        </a>
+    </div>
 </div>
 </body>
 </html>
