--- a/templates/choose_level.html.twig
+++ b/templates/choose_level.html.twig
@@ -14,7 +14,7 @@
   <a class="level-list__first" href="/first-level">
     <p class="level-list__first-level-title">1 уровень</p>
   </a>
-  {% if level == 2 %}
+  {% if level >= 2 %}
     <a class="level-list__second" href="/second-level">
       <p class="level-list__second-level-title">2 уровень</p>
     </a>
@@ -24,7 +24,7 @@
       <p class="unavailable">НЕДОСТУПНО</p>
     </div>
   {% endif %}
-  {% if level == 3 %}
+  {% if level >= 3 %}
     <a class="level-list__third" href="/second-level">
       <p class="level-list__third-level-title">3 уровень</p>
     </a>
