2024-07-13-dev добавил второй уровень

--- a/templates/second_level.html.twig
+++ b/templates/second_level.html.twig
@@ -23,6 +23,6 @@
   <link rel="stylesheet" href="css/level1-style.css"/>
 </head>
 <body>
-Здесь будет второй уровень
+<script src="script/level2.js"></script>
 </body>
 </html>
