2024-07-13-dev добавил переход по клику мыши

--- a/templates/legend.html.twig
+++ b/templates/legend.html.twig
@@ -29,6 +29,10 @@
         {
             window.location.href = '/menu';
         });
+        document.addEventListener('mousedown', function()
+        {
+            window.location.href = '/menu';
+        });
     </script>
 </body>
 </html>
