--- a/templates/screensaver.html.twig
+++ b/templates/screensaver.html.twig
@@ -16,6 +16,10 @@
       {
           window.location.href = '/user/signin';
       });
+      document.addEventListener('mousedown', function()
+      {
+          window.location.href = '/user/signin';
+      });
   </script>
 </body>
 </html>
