--- a/public/css/menu-style.css
+++ b/public/css/menu-style.css
@@ -40,6 +40,7 @@ body {
     border-radius: 30px;
     padding: 20px;
     color: rgba(255, 255, 255, 1);
+    text-align: center;
 }
 
 .rating__title,
@@ -63,6 +64,6 @@ body {
 
 img {
     border-radius: 0;
-    width: 80px;
-    height: 80px;
+    width: 120px;
+    height: 120px;
 }
