2024-07-13-dev добавил index.js оставив формирование уровня в level1.js и level2.js

--- a/templates/first_level.html.twig
+++ b/templates/first_level.html.twig
@@ -16,9 +16,10 @@
   <script src="script/Shield.js"></script>
   <script src="script/Health.js"></script>
   <script src="script/Portal.js"></script>
+  <script src="script/level1.js"></script>
   <link rel="stylesheet" href="css/first_level_style.css"/>
 </head>
 <body>
-<script src="script/level1.js"></script>
+  <script src="script/index.js"></script>
 </body>
 </html>
