--- a/templates/second_level.html.twig
+++ b/templates/second_level.html.twig
@@ -20,9 +20,10 @@
   <script src="script/Shield.js"></script>
   <script src="script/Health.js"></script>
   <script src="script/Portal.js"></script>
-  <link rel="stylesheet" href="css/level1-style.css"/>
+  <script src="script/level2.js"></script>
+  <link rel="stylesheet" href="css/first_level_style.css"/>
 </head>
 <body>
-<script src="script/level2.js"></script>
+<script src="script/index.js"></script>
 </body>
 </html>
