andrei-07-11-stalactite-logic Добавил объект Stalactite

--- a/templates/first_level.html.twig
+++ b/templates/first_level.html.twig
@@ -6,6 +6,7 @@
   <script src="script/Bullet.js"></script>
   <script src="script/Experience.js"></script>
   <script src="script/Fireball.js"></script>
+  <script src="script/Stalactite.js"></script>
   <script src="script/Hero.js"></script>
   <script src="script/Enemy.js"></script>
   <script src="script/Devil.js"></script>
