2024-07-13-dev поменял тайтлы у html страниц

--- a/templates/first_level.html.twig
+++ b/templates/first_level.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Game</title>
+  <title>First Level</title>
   <script src="script/pixi.js"></script>
   <script src="script/Bullet.js"></script>
   <script src="script/Experience.js"></script>
