--- a/templates/second_level.html.twig
+++ b/templates/second_level.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Game</title>
+  <title>Second Level</title>
   <script src="script/pixi.js"></script>
   <script src="script/Bullet.js"></script>
   <script src="script/Experience.js"></script>
