andrei-07-11-stalactite-logic Добавил логику сталактитов, компоновку 2 уровня

--- a/templates/first_level.html.twig
+++ b/templates/first_level.html.twig
@@ -18,6 +18,7 @@
   <script src="script/Health.js"></script>
   <script src="script/Portal.js"></script>
   <script src="script/level1.js"></script>
+  <script src="script/Wall.js"></script>
   <link rel="stylesheet" href="css/first_level_style.css"/>
 </head>
 <body>
