andrei-07-11-stalactite-logic Раскидал бонусы на 2 уровне

--- a/templates/second_level.html.twig
+++ b/templates/second_level.html.twig
@@ -15,6 +15,7 @@
   <script src="script/Mushroom.js"></script>
   <script src="script/Smoke.js"></script>
   <script src="script/Ground.js"></script>
+  <script src="script/Stalactite.js"></script>
   <script src="script/Wall.js"></script>
   <script src="script/WoodenPlank.js"></script>
   <script src="script/Shield.js"></script>
