misha-07-15-new-win-and-lose-screens добавил кнопку "Выбор уровня" на экраны победы и проигрыша. Поправил вёрстку

--- a/templates/game_lose.html.twig
+++ b/templates/game_lose.html.twig
@@ -12,13 +12,13 @@
 <div class="main">
     <h1 class="center-align">Вы мертвы</h1>
     <div class="options-list">
-        <a class="options-list__restart" href="/first-level">
+        <a class="options-list__restart" onclick="history.back();">
             <img src="images/restart_icon.svg" alt="restart">
             <p class="restart">Повторить</p>
         </a>
         <a class="options-list__continue" href="/choose-level">
-            <img src="images/continue_icon.svg" alt="continue">
-            <p class="continue">Продолжить</p>
+            <img src="images/home_icon.svg" alt="home">
+            <p class="continue">Выбор уровня</p>
         </a>
     </div>
 </div>
