--- a/public/css/lose-style.css
+++ b/public/css/lose-style.css
@@ -47,3 +47,24 @@ img {
     width: 70px;
     height: 70px;
 }
+
+@media (max-height: 660px) {
+    img {
+        width: 60px;
+        height: 60px;
+    }
+
+    .options-list__top {
+        font: 400 20px/24px "Russo One", sans-serif;
+        color: rgba(255, 255, 255, 1);
+    }
+
+    .options-list__bottom {
+        font: 400 20px/24px "Russo One", sans-serif;
+        color: rgba(255, 255, 255, 1);
+    }
+
+    .main {
+        height: 80%;
+    }
+}
