--- a/public/css/win-style.css
+++ b/public/css/win-style.css
@@ -17,7 +17,7 @@ body {
 .main {
     background-color: rgba(61, 61, 61, 0.6);
     width: 700px;
-    height: 50%;
+    height: 60%;
     margin: 5% auto 0 auto;
     border-radius: 30px;
     padding: 30px;
@@ -29,9 +29,14 @@ h1 {
     margin: 0 0 20px 0;
 }
 
-.options-list {
+.options-list__top {
     display: flex;
     justify-content: space-around;
+    font: 400 30px/34px "Russo One", sans-serif;
+    color: rgba(255, 255, 255, 1);
+}
+
+.options-list__bottom {
     font: 400 30px/34px "Russo One", sans-serif;
     color: rgba(255, 255, 255, 1);
 }
@@ -46,4 +51,25 @@ img {
     border-radius: 0;
     width: 70px;
     height: 70px;
+}
+
+@media (max-height: 660px) {
+    img {
+        width: 60px;
+        height: 60px;
+    }
+
+    .options-list__top {
+        font: 400 20px/24px "Russo One", sans-serif;
+        color: rgba(255, 255, 255, 1);
+    }
+
+    .options-list__bottom {
+        font: 400 20px/24px "Russo One", sans-serif;
+        color: rgba(255, 255, 255, 1);
+    }
+
+    .main {
+        height: 80%;
+    }
 }
