pavel-07-16-level3 Прорисована карта, добавлены бонусы

--- a/templates/choose_level.html.twig
+++ b/templates/choose_level.html.twig
@@ -25,7 +25,7 @@
     </div>
   {% endif %}
   {% if level >= 3 %}
-    <a class="level-list__third" href="/second-level">
+    <a class="level-list__third" href="/third-level">
       <p class="level-list__third-level-title">3 уровень</p>
     </a>
   {% else %}
