--- a/templates/third_level.html.twig
+++ b/templates/third_level.html.twig
@@ -11,11 +11,22 @@
   <script src="script/Devil.js"></script>
   <script src="script/Bat.js"></script>
   <script src="script/Poison.js"></script>
+  <script src="script/Fire.js"></script>
+  <script src="script/Mushroom.js"></script>
+  <script src="script/Smoke.js"></script>
   <script src="script/Ground.js"></script>
+  <script src="script/Stalactite.js"></script>
+  <script src="script/Wall.js"></script>
   <script src="script/WoodenPlank.js"></script>
+  <script src="script/Shield.js"></script>
+  <script src="script/Health.js"></script>
+  <script src="script/Portal.js"></script>
+  <script src="script/Boss.js"></script>
+  <script src="script/Shot.js"></script>
+  <script src="script/level3.js"></script>
   <link rel="stylesheet" href="css/level1-style.css"/>
 </head>
 <body>
-Здесь будет третий уровень
+<script src="script/index.js"></script>
 </body>
 </html>
