--- a/templates/third_level.html.twig
+++ b/templates/third_level.html.twig
@@ -24,7 +24,7 @@
   <script src="script/Boss.js"></script>
   <script src="script/Shot.js"></script>
   <script src="script/level3.js"></script>
-  <link rel="stylesheet" href="css/level1-style.css"/>
+  <link rel="stylesheet" href="css/first_level_style.css"/>
 </head>
 <body>
 <script src="script/index.js"></script>
